--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@pixi/tilemap": "^3.2.2",
+    "bitecs": "^0.3.38",
     "pixi-viewport": "^4.38.0",
     "pixi.js": "^6.5.9",
+    "pulsar-pathfinding": "^2.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-interval-hook": "^1.1.3"
   }
 }
