--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@pixi/tilemap": "^3.2.2",
     "bitecs": "^0.3.38",
+    "easystarjs": "^0.4.4",
+    "eventemitter3": "^5.0.0",
+    "gl-matrix": "^3.4.3",
     "pixi-viewport": "^4.38.0",
     "pixi.js": "^6.5.9",
     "pulsar-pathfinding": "^2.1.1",
